--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : düsenlab 
+tagline: Web, Technik, Basteln, usw...
 author :
-  name : Name Lastname
+  name : Philipp Kluge
   email : philipp.kluge@gmail.com
   github : duesenlab
-  twitter : username
-  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +24,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://duesenlab.github.io
+production_url : http://duesenlab.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
